Use the IdeHook.List to determine when EquoChromium is enabled.